@@ -5,22 +5,27 @@
     <groupId>com.famaridon</groupId>
     <artifactId>redmine-ng-api</artifactId>
     <name>redmine-ng-server</name>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <modules>
         <module>redmine-ng-web</module>
+        <module>redmine-client</module>
+        <module>redmine-client-api</module>
+        <module>redmine-ng-cache</module>
+        <module>redmine-ng-cache-api</module>
         <module>redmine-ng-web-rest</module>
         <module>redmine-ng-web-rest-api</module>
         <module>redmine-ng-services</module>
+        <module>redmine-ng-services-api</module>
         <module>redmine-ng-domain</module>
     </modules>
     <packaging>pom</packaging>
 
     <properties>
         <!-- runtime versions -->
-        <wildfly.version>14.0.1.Final</wildfly.version>
+        <wildfly.version>15.0.1.Final</wildfly.version>
         <javaee-api.version>8.0</javaee-api.version>
-        <infinispan.version>9.3.1.Final</infinispan.version>
-        <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+        <infinispan.version>9.4.3.Final</infinispan.version>
+        <hibernate-validator.version>6.0.14.Final</hibernate-validator.version>
         <fluent-hc.version>4.5.6</fluent-hc.version>
         <jsoup.version>1.11.2</jsoup.version>
         <commons-configuration2.version>2.4</commons-configuration2.version>
@@ -29,6 +34,8 @@
         <commons-csv.version>1.6</commons-csv.version>
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
         <slf4j-api.version>1.7.25</slf4j-api.version>
+        <flyway.version>5.2.4</flyway.version>
+        <aspose-words.version>19.2</aspose-words.version>
 
         <!-- test version -->
         <junit.version>4.12</junit.version>
@@ -36,8 +43,7 @@
         <arquillian.version>1.4.1.Final</arquillian.version>
         <wildfly-arquillian-container.version>2.1.1.Final</wildfly-arquillian-container.version>
         <shrinkwrap-resolver.version>3.1.3</shrinkwrap-resolver.version>
-        <jacoco-core.version>0.8.2</jacoco-core.version>
-        <arquillian-jacoco.version>1.0.0.Alpha10</arquillian-jacoco.version>
+        <jacoco-core.version>0.8.3</jacoco-core.version>
 
         <!-- maven plugins version -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -100,13 +106,37 @@
                 <version>${hibernate-validator.version}</version>
                 <scope>provided</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-core</artifactId>
+                <version>${flyway.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-jdk8</artifactId> <!-- use mapstruct-jdk8 for Java 8 or higher -->
                 <version>${org.mapstruct.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.famaridon</groupId>
+                <artifactId>redmine-client-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.famaridon</groupId>
+                <artifactId>redmine-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.famaridon</groupId>
+                <artifactId>redmine-ng-cache</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.famaridon</groupId>
+                <artifactId>redmine-ng-cache-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.famaridon</groupId>
                 <artifactId>redmine-ng-web-rest-api</artifactId>
@@ -120,6 +150,11 @@
             <dependency>
                 <groupId>com.famaridon</groupId>
                 <artifactId>redmine-ng-services</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.famaridon</groupId>
+                <artifactId>redmine-ng-services-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -163,6 +198,12 @@
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j-api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.aspose</groupId>
+                <artifactId>aspose-words</artifactId>
+                <version>${aspose-words.version}</version>
+                <classifier>jdk16</classifier>
+            </dependency>
 
             <!-- test dependencies -->
             <!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -185,13 +226,6 @@
                 <version>${jacoco-core.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-jacoco</artifactId>
-                <version>${arquillian-jacoco.version}</version>
-                <scope>test</scope>
-            </dependency>
-
             <dependency>
                 <groupId>org.jboss.arquillian</groupId>
                 <artifactId>arquillian-bom</artifactId>
@@ -265,11 +299,6 @@
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-jacoco</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -347,6 +376,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                  <argLine>
+                    --illegal-access=permit
+                  </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.wildfly.plugins</groupId>
@@ -363,8 +397,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source> <!-- or higher, depending on your project -->
-                    <target>${maven.compiler.target}</target> <!-- or higher, depending on your project -->
+                    <target>${maven.compiler.target}</target>
+                    <source>${maven.compiler.source}</source>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -416,6 +450,10 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <configuration>
+                            <address>127.0.0.1</address>
+                            <port>6300</port>
+                            <reset>true</reset>
+                            <append>true</append>
                             <excludes>
                                 <exclude>com/famaridon/redminengapi/domain/entities/*</exclude>
                                 <exclude>com/famaridon/redminengapi/services/indicators/beans/*</exclude>
@@ -423,18 +461,13 @@
                                 <exclude>**/*MapperImpl*</exclude>
                                 <exclude>com/famaridon/redminengapi/rest/**/*</exclude> <!-- I don't know how to test it -->
                             </excludes>
+                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                         </configuration>
                         <executions>
                             <execution>
+                                <phase>post-integration-test</phase>
                                 <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>report</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>report</goal>
+                                    <goal>dump</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -475,4 +508,13 @@
             </build>
         </profile>
     </profiles>
+
+    <repositories>
+        <repository>
+            <id>aspose</id>
+            <name>repository.aspose.com-releases</name>
+            <url>http://repository.aspose.com/repo</url>
+        </repository>
+    </repositories>
+
 </project>
